# semantic-fact-db

./: .gitignore  CITATION.cff  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: benchmark.json
docs/: architecture.md  benchmarking.md  conf.py  index.rst  kg_engine.md  mathematics.md  optimization.md  research_methodology.md  semantic_model.md  sheaf_database.md
paper/: Makefile  bibliography.bib  main.tex
paper/drafts/: README.md  architecture.tex  datasets.tex  experimental_setup.tex  kg_storage.tex  query_execution.tex  restriction_maps.tex  results.tex  system_design.tex
paper/sections/: 06_contextual_workloads.tex  07_high_arity.tex  08_temporal_provenance.tex  09_consistency_global_sections.tex  10_ablation.tex  11_mixed_flagship.tex  abstract.tex  appendix.tex  artifact.tex  background.tex  benchmark_methodology.tex  complexity.tex  conclusion.tex  correctness.tex  discussion.tex  evaluation.tex  experimental_setup.tex  formal_definitions.tex  future_work.tex  global_sections.tex  implementation.tex  introduction.tex  kg_architecture.tex  kg_query_engine.tex  knowledge_graph.tex  limitations.tex  mapping.tex  mathematical_foundations.tex  mathematical_model.tex  motivation.tex  optimizer.tex  problem_statement.tex  query_engine.tex  related_work.tex  semantic_model.tex  sheaf_database.tex  (+4 more)
research/: PROJECT_COMPLETION.md  contextual_benchmark_analysis.md  feature_validation.md  final_audit.md  notebook.py  open_questions.md  optimization_summary.md  paper_issues.md  publication_scorecard.md  quality_gates.md  reviewer_simulation.md  risk_register.md
scripts/: generate_figures.py  generate_paper.py  generate_tables.py  rdflib_spotcheck.py  reproduce.py  run_benchmarks.py
tests/: test_architecture.py  test_cross_engine.py  test_roundtrip.py  test_schema.py  test_serialization.py  test_validation.py
(+221 files in other folders)
